# le_umi_recorder

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  start_server.bat  start_server.sh
backend/: api.py  generate_cert.py  requirements.txt  server.py
backend/certs/: cert.pem  key.pem
client/: README.md  examples_async.py  examples_sync.py  requirements.txt  setup.py
client/quest_controller_client/: __init__.py  client.py  models.py  sync_client.py
examples/: README.md  csv_logger.py  polling_example.py  simple_collector.py
frontend/: app.js  index.html  styles.css
umi/: __init__.py  camera_manager.py  config.example.yaml  episode_controller.py  kin.py  lerobot_recorder.py  lerobot_writer.py  requirements.txt  tasks.yaml  visualize_dataset.py
umi/datasets/2025_12_29_11_06_57/my_dataset/meta/: info.json
umi/utils/: __init__.py
umi/utils/rerun_urdf/: __init__.py  visualizer.py
