[project]
name = "le-umi-recorder"
version = "1.0.0"
description = "WebXR Controller Tracking with UMI Dataset Recording"
requires-python = ">=3.10"
dependencies = [
    # Server/client
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "cryptography>=41.0.0",
    # UMI recorder
    "rerun-sdk>=0.20.0,<=0.26.2",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "pynput>=1.7.6",
    "pyarrow>=14.0.0,<18.0.0",
    "pyyaml>=6.0",
    "trimesh>=4.0.0",
    "yourdfpy>=0.0.50",
    "placo",
]

[project.scripts]
umi-recorder = "umi.lerobot_recorder:cli"
umi-visualize = "umi.visualize_dataset:main"
umi-calibrate-gripper = "umi.calibrate_gripper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umi"]
